rework chant conversion into recipe